<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/formlogin_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEFEFEF"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/formlogin_pb"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/formlogin_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/show_login"
            android:textColor="#FF000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formlogin_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEFEFEF"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/desc_state"
            android:src="@drawable/im" />

        <EditText
            android:id="@+id/formlogin_userid"
            android:layout_width="match_parent"
            android:layout_height="48.0dip"
            android:background="#00000000"
            android:drawablePadding="25dip"
            android:drawableStart="@drawable/login_icon_account"
            android:hint="@string/user_name"
            android:paddingEnd="15dip"
            android:paddingStart="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/base_horization_line" />

        <EditText
            android:id="@+id/formlogin_pwd"
            android:layout_width="match_parent"
            android:layout_height="48.0dip"
            android:background="#00000000"
            android:drawablePadding="25dip"
            android:drawableStart="@drawable/login_icon_password"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:paddingEnd="15dip"
            android:paddingStart="15dip"
            android:textColorHint="#ffdddddd" />

         <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/base_horization_line" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/formlogin_btsubmit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="40.0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_form"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/formlogin_btcancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="40.0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_bg"
				android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/register_form"
                android:textColor="#FF000000"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>