<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f2f5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/rl_selfinfo" />

        <TextView
            android:id="@+id/tv_set_selfinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/register_bottom_arrow"
            android:drawablePadding="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/base_horization_line" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rememberaccount" />

        <Switch
            android:id="@+id/switch_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/base_horization_line" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/isornotonline" />

        <Switch
            android:id="@+id/switch_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/base_horization_line" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/opennotify" />

        <Switch
            android:id="@+id/switch_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/base_horization_line" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/search_friends" />

        <TextView
            android:id="@+id/tv_set_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/register_bottom_arrow"
            android:drawablePadding="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/base_horization_line" >
    </View>

    <Button
        android:id="@+id/data_clear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
       android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/cacheclear" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/base_horization_line" >
    </View>
    
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/logout" />

</LinearLayout>