<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEFEF"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/formregister_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEFEFEF"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/formlogin_pb"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/formlogin_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/show_login"
            android:textColor="#FF000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formregister_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEFEFEF"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/formregister_userid"
            android:layout_width="match_parent"
            android:layout_height="48.0dip"
            android:background="#00000000"
            android:drawablePadding="25dip"
            android:drawableStart="@drawable/login_icon_account"
            android:hint="@string/user_name"
            android:paddingEnd="15dip"
            android:paddingStart="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/base_horization_line" />

        <EditText
            android:id="@+id/formregister_pwd"
            android:layout_width="match_parent"
            android:layout_height="48.0dip"
            android:background="#00000000"
            android:drawablePadding="25dip"
            android:drawableStart="@drawable/login_icon_password"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:paddingEnd="15dip"
            android:paddingStart="15dip"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/base_horization_line" />

        <EditText
            android:id="@+id/formregister_pwd_auth"
            android:layout_width="match_parent"
            android:layout_height="48.0dip"
            android:background="#00000000"
            android:drawablePadding="25dip"
            android:drawableStart="@drawable/login_icon_password"
            android:hint="@string/user_password_auth"
            android:inputType="textPassword"
            android:paddingEnd="15dip"
            android:paddingStart="15dip"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/base_horization_line" />

        <Button
            android:id="@+id/formregister_resiter"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="40.0dip"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/register_form"
            android:textColor="#FF000000"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>